# QKD_Winnow

./: .gitignore  CMakeLists.txt  QKD_Winnow_CPP.sln  config.json  main.cpp
QKD_Winnow_CPP/: QKD_Winnow_CPP.cpp  QKD_Winnow_CPP.vcxproj  QKD_Winnow_CPP.vcxproj.filters
example/: winnow_example.cpp
examples/: simple_winnow_example.cpp
results/: winnow_cpp(trial_num=100,shuff_mode=1,seed=1717936930).csv  winnow_res_cpp(trial_num=100,shuff_mode=0).csv  winnow_res_cpp(trial_num=100,shuff_mode=1).csv
src/: QKD_Winnow.cpp  bit_array_operations.cpp  bit_array_operations.hpp  config.cpp  config.hpp  main.cpp  simulation.cpp  simulation.hpp  winnow_algorithm.cpp  winnow_algorithm.hpp
